		  more 3s lag until the names are shown when the dialog is
		  opened for the first time.
		* ED2K/Kad User/Filecount is now shown in the remote-gui status
		  bar.
		* Kad users/files also updated on the Kad Tab.
		* Backed out a now obsolete change made in CommentDialogLst.cpp
		  (comments are not related to remote filenames anymore).
		* Fix for crash on receiving zero-sized UDP packet

	Tiziano Müller:
		* Fixed compilation when --enable-geoip is used in conjunction
		  with the ld-flag "--as-needed".

	Trevino:
		* Fix for "Both the Unknown client icon and the Unknown status
		icon points to the same file" issue.
		* Skin support with relative paths.

	visualage:
		* Fix for aMuleWeb unicode search/download link error.
		* Fix for aMuleWeb segfault when refreshing too frequently.
		* Fix for regular expression in aMuleWeb-PHP/split function.

	Vollstrecker:
		* Added possibility to give the path for output right with
		  -p or -o in cas.
		* Changed cas to use getopt_long.
		* Added --config-dir and -c option to cas.
		* Added alias -H --html to cas.
		* Added alias -P --picture to cas.
		* Added --config-dir and -c option to ed2k.
		* Added --config-dir option to amuled.
		* Fixed typos in the man pages.
		* Added manpage for amulegui.
		* Added amulegui desktop icon (with Gerd78).
		* Manpages update.
		* Add debian folder.
		* Correct use of libcrypto >= 5.5 and update of debian-dir.
		* Added Option to use generic ipfilter.dat.
		* Made possible to select which translations get build and
		  installed.
		* Install only manpages in requested Langs.

	wuischke:
		* Add emulecollection support on aMule ED2K Links Handler
		* Fix online signature update rate
		* Fix display of filesize > 4GB in file detail dialog
		* Fix toolbar import/about icon order
		* Add option to load emulecollection in SharedFilesCtrl
		* Add oga and ogv extension for file type search
		* Allow skin/webserver template section via wxchoice + skin enhancement